; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_worker_data_fetch_protocol.c_TableDDLCommandList.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_worker_data_fetch_protocol.c_TableDDLCommandList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@NIL = common dso_local global i32* null, align 8
@FORCE_NEW_CONNECTION = common dso_local global i32 0, align 4
@GET_TABLE_DDL_EVENTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @TableDDLCommandList(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %12 = load i32*, i32** @NIL, align 8
  store i32* %12, i32** %7, align 8
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %8, align 8
  store i32* null, i32** %9, align 8
  store i32* null, i32** %10, align 8
  %13 = load i32, i32* @FORCE_NEW_CONNECTION, align 4
  store i32 %13, i32* %11, align 4
  %14 = call %struct.TYPE_4__* (...) @makeStringInfo()
  store %struct.TYPE_4__* %14, %struct.TYPE_4__** %8, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %16 = load i32, i32* @GET_TABLE_DDL_EVENTS, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @appendStringInfo(%struct.TYPE_4__* %15, i32 %16, i8* %17)
  %19 = load i32, i32* %11, align 4
  %20 = load i8*, i8** %4, align 8
  %21 = load i32, i32* %5, align 4
  %22 = call i32* @GetNodeConnection(i32 %19, i8* %20, i32 %21)
  store i32* %22, i32** %9, align 8
  %23 = load i32*, i32** %9, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @ExecuteOptionalRemoteCommand(i32* %23, i32 %26, i32** %10)
  %28 = load i32*, i32** %10, align 8
  %29 = call i32* @ReadFirstColumnAsText(i32* %28)
  store i32* %29, i32** %7, align 8
  %30 = load i32*, i32** %10, align 8
  %31 = call i32 @PQclear(i32* %30)
  %32 = load i32*, i32** %9, align 8
  %33 = call i32 @ForgetResults(i32* %32)
  %34 = load i32*, i32** %9, align 8
  %35 = call i32 @CloseConnection(i32* %34)
  %36 = load i32*, i32** %7, align 8
  ret i32* %36
}

declare dso_local %struct.TYPE_4__* @makeStringInfo(...) #1

declare dso_local i32 @appendStringInfo(%struct.TYPE_4__*, i32, i8*) #1

declare dso_local i32* @GetNodeConnection(i32, i8*, i32) #1

declare dso_local i32 @ExecuteOptionalRemoteCommand(i32*, i32, i32**) #1

declare dso_local i32* @ReadFirstColumnAsText(i32*) #1

declare dso_local i32 @PQclear(i32*) #1

declare dso_local i32 @ForgetResults(i32*) #1

declare dso_local i32 @CloseConnection(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
